# alura_space

./: pyproject.toml  requieremnts.txt
galeria/: urls.py
setup/: settings.py  urls.py
templates/galeria/: index.html
