[tool.poetry]
name = "alura-space"
version = "0.1.0"
description = "Projeto de atualização do Curso de Django 4"
authors = ["Sander Toledo <sanderaugusto@gmail.com>"]
readme = "README.md"
packages = [{include = "alura_space"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
